# BEE-manipulator

./: .editorconfig  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  BEEManipulator.py  BEEManipulator.spec  BeeStart package creator.py  CONTRIBUTING.md  Pipfile  README.md  TODO.md  UCPDapi.py  UI.py  aboutWindow.py  bases.py  beeManager.py  beeShortcut.py  browser.py  build.bat  build.py  compier replaced FIX.bat  compiler replaced FIX  compilerFailHandler.py  config.cfg  config.py  core.python.1421.1578900720  core.python.1430.1578900721  devtool.py  env.bat  hook-cefpython3.py  imagepackage.py  installer.py  logWindow.py  logger.py  main.py  packages.py  pluginManager.py  pyproject.toml  requirements.txt  (+13 more)
.github/: dependabot.yml
.theia/: settings.json
activityManager/: activityManager.sln  activityManager.vcxproj  activityManager.vcxproj.filters  cpp.hint  discordManager.cpp  discordManager.h  discordManager.hpp  discordManager.ilk  dllmain.cpp
assets/: about.html  about.md
discordManagerPython/: discordManagerPython.vcxproj  discordManagerPython.vcxproj.filters  discordMnagerPython.cpp  discordmanagerPython.h
docs/: BM_ui.pptx  MenuExample.py  compile.bat  decoratorExamplePlugin.py  docs.md  subClassExamplePlugin.py  ui.py  upload_release.py
langs/: EN_us.jlang  en_US.jlang
pygletTests/: test.py
src/: BEEManipulator.py  BEEManipulator.pyw  BEEManipulator.spec  BEEManipulator_debug.spec  BEEManipulator_release.spec  Plugin.py  aboutWindow.py  beeManager.py  beeShortcut.py  browser.py  cefManager.py  clean.bat  cli.py  compilerFailHandler.py  (+20 more)
(+84 files in other folders)
