[tool.poetry]
    name = 'Portal Toolkit'
    version = '0.1.0'
    description = ''
    authors = [ 'ENDERZOMBI102 <enderzombi102.end@gmail.com>' ]
    readme = 'README.md'
    packages = [{ include = 'bee_manipulator' }]

[tool.poetry.dependencies]
    python = '>=3.11,<3.12'
    markdown2 = '^2.4.8'
    pypresence = '^4.2.1'
    requests = '^2.31.0'
    semver = '^3.0.1'
    pyside6 = '^6.5.1.1'
    icespringpysidestubs-pyside6 = '^1.3.1'


[build-system]
    requires = [ 'poetry-core' ]
    build-backend = 'poetry.core.masonry.api'
