[tool.poetry]
    name = 'Portal Toolkit'
    version = '0.1.0'
    description = 'A modular and pluggable set of tools for the games of the Portal series'
    authors = [ 'ENDERZOMBI102 <enderzombi102.end@gmail.com>' ]
    readme = 'README.md'
    packages = [{ include = 'ptok' }]

[tool.poetry.dependencies]
    python = '>=3.11,<3.12'
    markdown2 = '^2.4.8'
    pypresence = '^4.2.1'
    requests = '^2.31.0'
    semver = '^3.0.1'
    pyside6 = '^6.5.1.1'
    icespringpysidestubs-pyside6 = '^1.3.1'
    tomlkit = '^0.11.8'
    beartype = '^0.14.1'
    pydantic = '^1.10.9'
    srctools = { git = 'https://github.com/TeamSpen210/srctools.git' }

[tool.poetry.group.dev.dependencies]
    pyinstaller = '^5.12.0'
    mypy = '^1.3.0'

[build-system]
    requires = [ 'poetry-core' ]
    build-backend = 'poetry.core.masonry.api'
